# neurosync

./: .gitignore  README.md  check_metadata.py  landmark_picker.py  pyproject.toml  skin_extractor.py  skull_extractor.py  total_extractor.py  tumor_extractor.py  xr_simulation.py
Control_Subjects/Full-Head Segmentation/: readme.txt
Control_Subjects/T1-Weighted MRI/: readme.txt
