[project]
name = "neurosync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.35",
    "numpy>=2.4.4",
    "open3d>=0.19.0",
    "opencv-python>=4.13.0.92",
    "pyvista>=0.48.0",
    "simpleitk>=2.5.4",
]
